# BARBERSHOP_DJANGO

./: .env.example  .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  Git_Hub.docx  HOMEWORK_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK.md  TESTING_CLONE.md  TESTING_INSTRUCTIONS.md  db_backup.sqlite3  db_current_backup.sqlite3  dump.json  env.example  et --soft HEAD~2  how d5a4b0c --name-only  pyproject.toml  requirements.txt  setup.py  tatus  Тест.docx
.github/workflows/: deploy.yml
barbershop/: production_settings.py  settings.py
core/: admin.py  context_processors.py  data.py  forms.py  models.py  urls.py  views.py
core/management/commands/: check_db.py  check_reviews.py  create_superuser.py  export_data.py  load_initial_data.py
core/migrations/: 0001_fake_initial.py  0001_initial.py  0002_alter_order_date_alter_order_time.py  0003_delete_master_delete_order.py  0004_initial.py  0005_master_specialization.py
core/templates/core/: booking.html  final_reviews.html  master_detail.html  masters.html  order_detail.html  orders_list.html  reviews.html  services.html  simple_reviews.html  test.html  test_orders.html  (+1 more)
deploy/: barbershop.service  deploy.sh  gunicorn.conf.py  nginx.conf  setup_ssl.sh
static/: main.css  main.js
static/css/: main.css
templates/: base.html  landing.html  order_detail.html  orders_list.html  thanks.html
templates/core/: masters.html  order_detail.html  orders_list.html  services.html  thanks.html
templates/includes/: menu.html  order_card.html
templates/users/: login.html  logout.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py  views_backup.py
users/migrations/: 0001_initial.py
(+11 files in other folders)
