[project]
name = "barbershop-django"
version = "0.1.0"
description = ""
authors = [
    {name = "katya1nik", email = "your_email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3,<6.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "django-extensions>=3.2.0,<4.0.0",
    "pillow>=10.0.0,<11.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
